--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,12 +1,12 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion "25.0.2"
+    compileSdkVersion build_versions.target_sdk
+    buildToolsVersion build_versions.build_tools
     defaultConfig {
         applicationId "team.zhuoke.zhuoke_sdk"
-        minSdkVersion 14
-        targetSdkVersion 25
+        minSdkVersion build_versions.min_sdk
+        targetSdkVersion build_versions.target_sdk
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -20,12 +20,13 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    })
-    testCompile 'junit:junit:4.12'
-    compile 'com.android.support.constraint:constraint-layout:1.0.0-beta4'
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    compile 'com.github.ZhuoKeTeam:zuoke-sdk:1.0.1'
+    testCompile deps.junit
+    androidTestCompile espresso.core
+
+    implementation support.annotations
+    implementation deps.constraint_layout
+
+    implementation 'com.github.ZhuoKeTeam:zuoke-sdk:1.0.1'
 }
