--- a/build.gradle
+++ b/build.gradle
@@ -1,25 +1,20 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
+	apply from: 'versions.gradle'
 
-    repositories {
-        jcenter()
-    }
+    addRepos(repositories)
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.4.0-alpha4'
-
+        classpath deps.android_gradle_plugin
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
 
-        classpath 'com.github.dcendents:android-maven-gradle-plugin:1.5'
+        classpath deps.android_maven_gradle_plugin
     }
 }
 
 allprojects {
-    repositories {
-        jcenter()
-        maven { url 'https://jitpack.io' }
-    }
+    addRepos(repositories)
 }
 
 task clean(type: Delete) {
