1. 修改 lib 的发布版本名称。

--- a/ZhuoKe/build.gradle
+++ b/ZhuoKe/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.library'
 apply plugin: 'com.github.dcendents.android-maven'
 
-group = 'com.github.ZhuoKeTeam'
+group = 'com.zhuoke.team'
 
 android {
     compileSdkVersion build_versions.target_sdk
