1. 添加 SD 卡的 单元测试； 2. 给主 App 添加 依赖 lib; 3. 添加异常处理类； 4. 添加 L 的 log 管理类； 5. ZKBase 添加功能； 6. 添加 网络和写入 权限； 7. 添加 utilcode 依赖。

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,13 +20,11 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     testCompile deps.junit
     androidTestCompile espresso.core
-
     implementation support.annotations
     implementation deps.constraint_layout
-
-    implementation 'com.github.ZhuoKeTeam:zhuoke-sdk:1.0.0-beta4'
+//    implementation 'com.github.ZhuoKeTeam:zhuoke-sdk:1.0.0-beta4'
+    implementation project(':ZhuoKe')
 }
