--- a/ZhuoKe/build.gradle
+++ b/ZhuoKe/build.gradle
@@ -22,6 +22,7 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile support.app_compat
+    api fileTree(dir: 'libs', include: ['*.jar'])
+    api support.app_compat
+    api deps.utilcode
 }
