--- a/ZhuoKe/src/main/AndroidManifest.xml
+++ b/ZhuoKe/src/main/AndroidManifest.xml
@@ -2,4 +2,8 @@
           package="team.zhuoke.sdk">
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+
+    <application>
+        <activity android:name=".ZKAggActivity"/>
+    </application>
 </manifest>
