--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,10 +21,16 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    testCompile deps.junit
+
+//    testCompile deps.junit
     androidTestCompile espresso.core
+
     implementation support.annotations
     implementation deps.constraint_layout
+
+    implementation deps.butterknife
+    annotationProcessor deps.butterknife_compiler
+
 //    implementation 'com.github.ZhuoKeTeam:zhuoke-sdk:1.0.0-beta4'
     implementation project(':ZhuoKe')
 }
