--- a/ZhuoKe/build.gradle
+++ b/ZhuoKe/build.gradle
@@ -23,6 +23,10 @@ android {
 
 dependencies {
     api fileTree(dir: 'libs', include: ['*.jar'])
+    api support.recyclerview
     api support.app_compat
+    api deps.support.v4
     api deps.utilcode
+    api deps.rvh
+
 }
