--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,7 +22,7 @@ android {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
 
-//    testCompile deps.junit
+    testCompile deps.junit
     androidTestCompile espresso.core
 
     implementation support.annotations
