--- a/ZhuoKe/src/main/AndroidManifest.xml
+++ b/ZhuoKe/src/main/AndroidManifest.xml
@@ -1,9 +1,13 @@
+<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="team.zhuoke.sdk">
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    package="team.zhuoke.sdk">
+
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application>
-        <activity android:name=".ZKAggActivity"/>
+        <activity android:name=".ZKAggActivity" />
+        <activity android:name=".webview.WebActivity"></activity>
     </application>
+
 </manifest>
