--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion build_versions.target_sdk
+    compileSdkVersion 26
     buildToolsVersion build_versions.build_tools
     defaultConfig {
         applicationId "team.zhuoke.zhuoke_sdk"
@@ -21,16 +21,12 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-
     testCompile deps.junit
     androidTestCompile espresso.core
-
     implementation support.annotations
     implementation deps.constraint_layout
-
     implementation deps.butterknife
     annotationProcessor deps.butterknife_compiler
-
-//    implementation 'com.github.ZhuoKeTeam:zhuoke-sdk:1.0.0-beta4'
+    //    implementation 'com.github.ZhuoKeTeam:zhuoke-sdk:1.0.0-beta4'
     implementation project(':ZhuoKe')
 }
