--- a/ZhuoKe/src/main/AndroidManifest.xml
+++ b/ZhuoKe/src/main/AndroidManifest.xml
@@ -4,10 +4,12 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <!--悬浮窗权限-->
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
 
     <application>
         <activity android:name=".ZKAggActivity" />
-        <activity android:name=".webview.WebActivity"></activity>
+        <activity android:name=".webview.WebActivity" />
     </application>
 
 </manifest>
