--- a/ZhuoKe/src/main/AndroidManifest.xml
+++ b/ZhuoKe/src/main/AndroidManifest.xml
@@ -7,6 +7,9 @@
     <!--悬浮窗权限-->
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
 
+    <!--收起状态栏权限-->
+    <uses-permission android:name="android.permission.EXPAND_STATUS_BAR" />
+
     <application>
         <activity android:name=".ZKAggActivity" />
         <activity android:name=".webview.WebActivity" />
