1. 添加通用 ZKApi; 2. 添加通用 ZKConnectionManager; 3. 添加通用 Constant; 4. 添加 ZKManager 工具类； 5. 添加某些内部依赖。

--- a/ZhuoKe/build.gradle
+++ b/ZhuoKe/build.gradle
@@ -29,5 +29,16 @@ dependencies {
     api deps.utilcode
     api deps.rvh
 
+
+//    以下这些 必须在主 app 中依赖
+    implementation deps.okhttp
+    implementation deps.okhttp_interceptor
+    implementation deps.stetho
+    implementation deps.stetho_okhttp3
+
+    // retrofit2
+    implementation deps.retrofit2
+    implementation deps.retrofit2_gson
+
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
 }
