--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,8 +21,8 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
-    androidTestCompile espresso.core
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    androidTestImplementation espresso.core
     implementation support.annotations
     implementation deps.constraint_layout
     implementation deps.butterknife
@@ -33,5 +33,5 @@ dependencies {
 //    implementation 'com.github.ZhuoKeTeam:zhuoke-sdk:1.0.4'
     implementation project(':ZhuoKe')
 
-    testCompile deps.junit
+    testImplementation deps.junit
 }
