1. 优化 Demo 的包名和显示； 2. 添加网络请求 快捷使用方式； 3. 添加 UrlConfig 和 ZhuoKeApi; 4. 升级为 compileSdkVersion 28； 5. 升级到 AndroidX 包； 6. 添加常用的类库； 7. 升级 gradle 版本为 gradle-5.3.1； 8. 添加 AndroidX 的使用； 9. 升级相关组件； 10. 升级构建的版本号。

--- a/ZhuoKe/build.gradle
+++ b/ZhuoKe/build.gradle
@@ -22,17 +22,14 @@ android {
     lintOptions {
         abortOnError false
     }
+
 }
 
 dependencies {
     api fileTree(dir: 'libs', include: ['*.jar'])
-    api support.recyclerview
-    api support.app_compat
-    api deps.support.v4
     api deps.utilcode
-    api deps.rvh
-
-    implementation deps.systembartint
+    api deps.rvhX
+    api deps.systembartint
 
     // okhttp
     api deps.okhttp
@@ -46,5 +43,14 @@ dependencies {
     api deps.retrofit2
     api deps.retrofit2_gson
 
-    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    api deps.constraint_layout
+    api deps.recyclerviewX
+
+    api(deps.appcompatX){
+        exclude group: 'com.android.support', module: 'support-compat'
+    }
+
+
+//    api deps.lifecycleRuntimeX
+//    api deps.lifecycleExtensionsX
 }
