--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 26
+    compileSdkVersion build_versions.target_sdk
     buildToolsVersion build_versions.build_tools
     defaultConfig {
         applicationId "team.zhuoke.zhuoke_sdk"
@@ -17,21 +17,23 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    compileOptions {
+        sourceCompatibility 1.8
+        targetCompatibility 1.8
+    }
+
 }
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     androidTestImplementation espresso.core
     implementation support.annotations
-    implementation deps.constraint_layout
     implementation deps.butterknife
-    implementation deps.systembartint
     annotationProcessor deps.butterknife_compiler
 
-//    implementation zkteam.zk_sdk
-//    implementation 'com.github.ZhuoKeTeam:zhuoke-sdk:1.0.4'
+//    implementation 'com.github.ZhuoKeTeam:zhuoke-sdk:1.0.5'
     implementation project(':ZhuoKe')
+
 
     testImplementation deps.junit
 }
