--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="team.zhuoke.zhuoke_sdk">
+          xmlns:tools="http://schemas.android.com/tools"
+          package="team.zhuoke.zhuoke_sdk">
 
     <application
         android:name=".ZKApplication"
@@ -9,8 +10,9 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        android:theme="@style/AppTheme"
+        tools:ignore="GoogleAppIndexingWarning">
+        <activity android:name=".activity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -21,8 +23,9 @@
                 android:name="android.app.shortcuts"
                 android:resource="@xml/static_shortcuts" />
         </activity>
-        <activity android:name=".AddShortcutActivity" />
-        <activity android:name=".NotificationUtilActivity"></activity>
+        <activity android:name=".activity.AddShortcutActivity" />
+        <activity android:name=".activity.NotificationUtilActivity"/>
+        <activity android:name=".activity.NetworkQuestionActivity"/>
     </application>
 
 </manifest>
