1. 添加  com.squareup.retrofit2:adapter-rxjava2:2.2.0 //适配器

--- a/ZhuoKe/build.gradle
+++ b/ZhuoKe/build.gradle
@@ -46,6 +46,8 @@ dependencies {
     // retrofit2
     api deps.retrofit2
     api deps.retrofit2_gson
+    api deps.retrofit2_adapter
+
 
     api deps.constraint_layout
     api deps.recyclerviewX
