--- a/versions.gradle
+++ b/versions.gradle
@@ -23,6 +23,7 @@ versions.okhttp = "3.14.1"
 versions.photo_view = "2.1.3"
 versions.photo_draweeview = "1.1.3"
 versions.retrofit = "2.5.0"
+versions.retrofit_adapter = "2.2.0"
 versions.rvh = "2.9.46"
 versions.rvhX = "2.9.45-androidx"
 versions.support = "28.0.0"
@@ -108,6 +109,7 @@ deps.junit = "junit:junit:$versions.junit"
 deps.retrofit = "com.squareup.retrofit2:retrofit:$versions.retrofit"
 deps.retrofit2 = "com.squareup.retrofit2:retrofit:$versions.retrofit"
 deps.retrofit2_gson = "com.squareup.retrofit2:converter-gson:$versions.retrofit"
+deps.retrofit2_adapter = "com.squareup.retrofit2:adapter-rxjava2:$versions.retrofit"
 deps.floatmenu = "com.yw.game.floatmenu:FloatMenu:$versions.floatmenu"
 
 deps.agent_gradle_plugin = "com.networkbench.newlens.agent.android:agent-gradle-plugin:$versions.networkbench_version"
