1. 在 BaseActivity 添加沉浸式效果; 2. 在 BaseFragment 里面添加沉浸式效果。

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,8 +31,8 @@ dependencies {
     implementation deps.butterknife
     annotationProcessor deps.butterknife_compiler
 
-    implementation 'com.github.ZhuoKeTeam:zhuoke-sdk:1.0.8'
-//    implementation project(':ZhuoKe')
+//    implementation 'com.github.ZhuoKeTeam:zhuoke-sdk:1.0.8'
+    implementation project(':ZhuoKe')
 
 
     testImplementation deps.junit
