1. 升级 utilcode 为 utilcodex， support 和 androidx 不兼容哦。

--- a/ZhuoKe/build.gradle
+++ b/ZhuoKe/build.gradle
@@ -31,7 +31,7 @@ android {
 
 dependencies {
     api fileTree(dir: 'libs', include: ['*.jar'])
-    api deps.utilcode
+    api deps.utilcodex
     api deps.rvhX
     api deps.systembartint
 
